# likeprop

./: README.md  pyproject.toml
src/likeprop/: __init__.py
src/likeprop/density/: __init__.py  distributions.py
src/likeprop/dynamics/: __init__.py  measures.py  ode_model.py  pipelines.py  state.py  utilities.py
src/likeprop/examples/: __init__.py  helper_pipelines.py  odes.py
src/likeprop/utils/: __init__.py  collections.py  helper_functions.py  plotter.py  typing.py
