[tool.poetry]
name = "likeprop"
version = "0.1.0"
description = "Propagate Likelihoods In Dynamical Systems"
authors = ["anon"]
readme = "README.md"
packages = [
	{include = "likeprop", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.28.2"
numpy = "^1.24.2"
scipy = "^1.10.1"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
torch = ">=2.0.1"
torchvision = ">=0.15.2"
torchdiffeq = ">=0.2.3"
diffrax = "^0.4.0"
jax = {extras = ["cpu"], version = "^0.4.13"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
jupyter = "^1.0.0"


[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
myst-parser = "^1.0.0"
sphinx-rtd-theme = "^1.2.0"
nbsphinx = "^0.9.1"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
